--- a/sports-iq-ml/data-cleanup/nba-player.ipynb
+++ b/sports-iq-ml/data-cleanup/nba-player.ipynb
@@ -2,81 +2,80 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(18044, 31)\n",
-      "  Rk              Player Pos Age   Tm   G  GS    MP   FG   FGA  ...  ORB  DRB  \\\n",
-      "0  1      Alaa Abdelnaby  PF  22  POR  43   0   6.7  1.3   2.7  ...  0.6  1.4   \n",
-      "1  2  Mahmoud Abdul-Rauf  PG  21  DEN  67  19  22.5  6.2  15.1  ...  0.5  1.3   \n",
-      "2  3          Mark Acres   C  28  ORL  68   0  19.3  1.6   3.1  ...  2.1  3.2   \n",
-      "3  4       Michael Adams  PG  28  DEN  66  66  35.5  8.5  21.5  ...  0.9    3   \n",
-      "4  5        Mark Aguirre  SF  31  DET  78  13  25.7  5.4  11.7  ...  1.7  3.1   \n",
+      "   Rk                   Player  Age Team Pos   G  GS    MP    FG   FGA  ...  \\\n",
+      "0   1  Shai Gilgeous-Alexander   26  OKC  PG  44  44  34.4  11.3  21.4  ...   \n",
+      "1   2    Giannis Antetokounmpo   30  MIL  PF  38  38  34.8  12.6  20.8  ...   \n",
+      "2   3             Nikola Jokić   29  DEN   C  40  40  36.4  11.5  20.1  ...   \n",
+      "3   4              LaMelo Ball   23  CHO  PG  31  31  33.3   9.7  23.3  ...   \n",
+      "4   5              Luka Dončić   25  DAL  PG  22  22  35.7   9.8  21.2  ...   \n",
       "\n",
-      "   TRB   AST  STL  BLK  TOV   PF   PTS  Year  \n",
-      "0  2.1   0.3  0.1  0.3  0.5  0.9   3.1  1991  \n",
-      "1  1.8   3.1  0.8  0.1  1.6  2.2  14.1  1991  \n",
-      "2  5.3   0.4  0.4  0.4  0.6  3.2   4.2  1991  \n",
-      "3  3.9  10.5  2.2  0.1  3.6  2.5  26.5  1991  \n",
-      "4  4.8   1.8  0.6  0.3  1.6  2.7  14.2  1991  \n",
+      "    DRB   TRB   AST  STL  BLK  TOV   PF   PTS  Awards  Player-additional  \n",
+      "0   4.4   5.3   6.0  2.1  1.1  2.7  2.2  32.1     NaN          gilgesh01  \n",
+      "1  10.0  12.2   5.9  0.8  1.4  3.4  2.4  31.5     NaN          antetgi01  \n",
+      "2   9.8  13.1  10.2  1.8  0.7  3.1  2.0  30.0     NaN          jokicni01  \n",
+      "3   4.3   5.3   7.3  1.4  0.3  3.7  3.5  28.2     NaN           ballla01  \n",
+      "4   7.6   8.3   7.8  2.0  0.4  3.4  2.6  28.1     NaN          doncilu01  \n",
       "\n",
-      "[5 rows x 31 columns]\n"
+      "[5 rows x 32 columns]\n",
+      "(548, 32)\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "nbaPlayers = pd.read_csv('../../data/nba/players.csv', sep=';')\n",
+    "nbaPlayers = pd.read_csv('../../data/nba/players.csv')\n",
     "\n",
-    "# print(nbaPlayers.head())\n",
+    "print(nbaPlayers.head())\n",
     "print(nbaPlayers.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "player                  0\n",
-      "position                0\n",
-      "age                     0\n",
-      "team                    0\n",
-      "game                    0\n",
-      "game-starts             0\n",
-      "minutes-per-game        0\n",
-      "field-goals             0\n",
-      "field-goal-attempts     0\n",
-      "field-point-percent     0\n",
-      "three-points            0\n",
-      "three-point-attempts    0\n",
-      "three-point-percent     0\n",
-      "two-points              0\n",
-      "two-point-attempts      0\n",
-      "two-point-percent       0\n",
-      "e-field-goal-percent    0\n",
-      "free-throws             0\n",
-      "free-throw-attempts     0\n",
-      "free-throw-percent      0\n",
-      "offensive-rebounds      0\n",
-      "defensive-rebounds      0\n",
-      "total-rebounds          0\n",
-      "assists                 0\n",
-      "steals                  0\n",
-      "blocks                  0\n",
-      "turnover                0\n",
-      "personal-fouls          0\n",
-      "points-per-game         0\n",
-      "year                    0\n",
-      "dtype: int64\n"
+      "                    player position  age team  game  game-starts  \\\n",
+      "0  Shai Gilgeous-Alexander       PG   26  OKC    44           44   \n",
+      "1    Giannis Antetokounmpo       PF   30  MIL    38           38   \n",
+      "2             Nikola Jokić        C   29  DEN    40           40   \n",
+      "3              LaMelo Ball       PG   23  CHO    31           31   \n",
+      "4              Luka Dončić       PG   25  DAL    22           22   \n",
+      "\n",
+      "   minutes-per-game  field-goals  field-goal-attempts  field-point-percent  \\\n",
+      "0              34.4         11.3                 21.4                0.528   \n",
+      "1              34.8         12.6                 20.8                0.605   \n",
+      "2              36.4         11.5                 20.1                0.570   \n",
+      "3              33.3          9.7                 23.3                0.419   \n",
+      "4              35.7          9.8                 21.2                0.464   \n",
+      "\n",
+      "   ...  offensive-rebounds  defensive-rebounds  total-rebounds  assists  \\\n",
+      "0  ...                 0.9                 4.4             5.3      6.0   \n",
+      "1  ...                 2.2                10.0            12.2      5.9   \n",
+      "2  ...                 3.3                 9.8            13.1     10.2   \n",
+      "3  ...                 1.0                 4.3             5.3      7.3   \n",
+      "4  ...                 0.7                 7.6             8.3      7.8   \n",
+      "\n",
+      "   steals  blocks  turnover  personal-fouls  points-per-game  year  \n",
+      "0     2.1     1.1       2.7             2.2             32.1  2025  \n",
+      "1     0.8     1.4       3.4             2.4             31.5  2025  \n",
+      "2     1.8     0.7       3.1             2.0             30.0  2025  \n",
+      "3     1.4     0.3       3.7             3.5             28.2  2025  \n",
+      "4     2.0     0.4       3.4             2.6             28.1  2025  \n",
+      "\n",
+      "[5 rows x 30 columns]\n",
+      "(548, 30)\n"
      ]
     }
    ],
@@ -85,7 +84,7 @@
     "    'player': nbaPlayers['Player'],\n",
     "    'position': nbaPlayers['Pos'],\n",
     "    'age': nbaPlayers['Age'],\n",
-    "    'team': nbaPlayers['Tm'],\n",
+    "    'team': nbaPlayers['Team'],\n",
     "    'game': nbaPlayers['G'],\n",
     "    'game-starts': nbaPlayers['GS'],\n",
     "    'minutes-per-game': nbaPlayers['MP'],\n",
@@ -111,17 +110,13 @@
     "\t\t'turnover': nbaPlayers['TOV'],\n",
     "\t\t'personal-fouls': nbaPlayers['PF'],\n",
     "\t\t'points-per-game': nbaPlayers['PTS'],\n",
-    "\t\t'year': nbaPlayers['Year'],\n",
+    "\t\t'year': 2025,\n",
     "})\n",
     "\n",
-    "# print(nbaPlayerScrubbed.head())\n",
+    "print(nbaPlayerScrubbed.head())\n",
+    "print(nbaPlayerScrubbed.shape)\n",
     "\n",
-    "null_mask = nbaPlayerScrubbed.isnull() \n",
-    "null_counts = nbaPlayerScrubbed.isnull().sum()\n",
-    "\n",
-    "print(null_counts)\n",
-    "\n",
-    "# nbaPlayerScrubbed.to_csv('../../data/nba-players.csv', index=False)"
+    "nbaPlayerScrubbed.to_csv('../../data/nba-players.csv', index=False)"
    ]
   }
  ],
@@ -141,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
