--- a/sports-iq-ml/data-cleanup/nba-season.ipynb
+++ b/sports-iq-ml/data-cleanup/nba-season.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(30, 31)\n"
+      "(27, 31)\n"
      ]
     }
    ],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,22 +74,22 @@
     "\t\t'defensiveTurnoverPercent': nbaTeams['dTOV%'],\n",
     "\t\t'defensiveReboundPercent': nbaTeams['DRB%'],\n",
     "\t\t'defensiveFreeThrowPerFieldGoal': nbaTeams['dFT/FGA'],\n",
-    "\t\t'year': 2010\n",
+    "\t\t'year': 1991\n",
     "})\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "InsertManyResult([ObjectId('67a19e9ff8a1b736568cd815'), ObjectId('67a19e9ff8a1b736568cd816'), ObjectId('67a19e9ff8a1b736568cd817'), ObjectId('67a19e9ff8a1b736568cd818'), ObjectId('67a19e9ff8a1b736568cd819'), ObjectId('67a19e9ff8a1b736568cd81a'), ObjectId('67a19e9ff8a1b736568cd81b'), ObjectId('67a19e9ff8a1b736568cd81c'), ObjectId('67a19e9ff8a1b736568cd81d'), ObjectId('67a19e9ff8a1b736568cd81e'), ObjectId('67a19e9ff8a1b736568cd81f'), ObjectId('67a19e9ff8a1b736568cd820'), ObjectId('67a19e9ff8a1b736568cd821'), ObjectId('67a19e9ff8a1b736568cd822'), ObjectId('67a19e9ff8a1b736568cd823'), ObjectId('67a19e9ff8a1b736568cd824'), ObjectId('67a19e9ff8a1b736568cd825'), ObjectId('67a19e9ff8a1b736568cd826'), ObjectId('67a19e9ff8a1b736568cd827'), ObjectId('67a19e9ff8a1b736568cd828'), ObjectId('67a19e9ff8a1b736568cd829'), ObjectId('67a19e9ff8a1b736568cd82a'), ObjectId('67a19e9ff8a1b736568cd82b'), ObjectId('67a19e9ff8a1b736568cd82c'), ObjectId('67a19e9ff8a1b736568cd82d'), ObjectId('67a19e9ff8a1b736568cd82e'), ObjectId('67a19e9ff8a1b736568cd82f'), ObjectId('67a19e9ff8a1b736568cd830'), ObjectId('67a19e9ff8a1b736568cd831'), ObjectId('67a19e9ff8a1b736568cd832')], acknowledged=True)"
+       "InsertManyResult([ObjectId('67a245e37976fc183e12e0d9'), ObjectId('67a245e37976fc183e12e0da'), ObjectId('67a245e37976fc183e12e0db'), ObjectId('67a245e37976fc183e12e0dc'), ObjectId('67a245e37976fc183e12e0dd'), ObjectId('67a245e37976fc183e12e0de'), ObjectId('67a245e37976fc183e12e0df'), ObjectId('67a245e37976fc183e12e0e0'), ObjectId('67a245e37976fc183e12e0e1'), ObjectId('67a245e37976fc183e12e0e2'), ObjectId('67a245e37976fc183e12e0e3'), ObjectId('67a245e37976fc183e12e0e4'), ObjectId('67a245e37976fc183e12e0e5'), ObjectId('67a245e37976fc183e12e0e6'), ObjectId('67a245e37976fc183e12e0e7'), ObjectId('67a245e37976fc183e12e0e8'), ObjectId('67a245e37976fc183e12e0e9'), ObjectId('67a245e37976fc183e12e0ea'), ObjectId('67a245e37976fc183e12e0eb'), ObjectId('67a245e37976fc183e12e0ec'), ObjectId('67a245e37976fc183e12e0ed'), ObjectId('67a245e37976fc183e12e0ee'), ObjectId('67a245e37976fc183e12e0ef'), ObjectId('67a245e37976fc183e12e0f0'), ObjectId('67a245e37976fc183e12e0f1'), ObjectId('67a245e37976fc183e12e0f2'), ObjectId('67a245e37976fc183e12e0f3')], acknowledged=True)"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
