Add Schema files

--- a/sports-iq-ml/data-cleanup/mlb-player-stats.ipynb
+++ b/sports-iq-ml/data-cleanup/mlb-player-stats.ipynb
@@ -2,56 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    StatID  TeamID  PlayerID  SeasonType  Season               Name Team  \\\n",
-      "0  6422574       1  10008679           2    2024  Elieser Hernandez  LAD   \n",
-      "1  6422575       1  10013631           2    2024         Drew Avans  LAD   \n",
-      "2  6422576       1  10009292           2    2024      Michael Grove  LAD   \n",
-      "3  6422577      33  10007188           2    2024      Tirso Ornelas   SD   \n",
-      "4  6422578       1  10010357           2    2024         Kody Hoese  LAD   \n",
-      "\n",
-      "  Position PositionCategory  Started  ...  PitchingCompleteGames  \\\n",
-      "0       SP                P        0  ...                    0.0   \n",
-      "1       CF               OF        2  ...                    0.0   \n",
-      "2       SP                P        1  ...                    0.0   \n",
-      "3       LF               OF        0  ...                    0.0   \n",
-      "4       3B               IF        0  ...                    0.0   \n",
-      "\n",
-      "   PitchingShutOuts  PitchingOnBasePercentage  PitchingSluggingPercentage  \\\n",
-      "0               0.0                     0.455                       0.600   \n",
-      "1               0.0                     0.000                       0.000   \n",
-      "2               0.0                     0.317                       0.405   \n",
-      "3               0.0                     0.000                       0.000   \n",
-      "4               0.0                     0.000                       0.000   \n",
-      "\n",
-      "   PitchingOnBasePlusSlugging  PitchingStrikeoutsPerNineInnings  \\\n",
-      "0                       1.055                              9.82   \n",
-      "1                       0.000                              0.00   \n",
-      "2                       0.722                             12.00   \n",
-      "3                       0.000                              0.00   \n",
-      "4                       0.000                              0.00   \n",
-      "\n",
-      "   PitchingWalksPerNineInnings  PitchingWeightedOnBasePercentage  \\\n",
-      "0                         4.91                             0.637   \n",
-      "1                         0.00                             0.000   \n",
-      "2                         4.00                             0.457   \n",
-      "3                         0.00                             0.000   \n",
-      "4                         0.00                             0.000   \n",
-      "\n",
-      "   FantasyPointsBatting  FantasyPointsPitching  \n",
-      "0                   0.0                  -3.34  \n",
-      "1                  28.0                   0.00  \n",
-      "2                   0.0                   7.00  \n",
-      "3                   2.0                   0.00  \n",
-      "4                  14.0                   0.00  \n",
-      "\n",
-      "[5 rows x 66 columns]\n",
+      "Index(['StatID', 'TeamID', 'PlayerID', 'SeasonType', 'Season', 'Name', 'Team',\n",
+      "       'Position', 'PositionCategory', 'Started', 'AverageDraftPosition',\n",
+      "       'AuctionValue', 'Games', 'FantasyPoints', 'AtBats', 'Runs', 'Hits',\n",
+      "       'Singles', 'Doubles', 'Triples', 'HomeRuns', 'RunsBattedIn',\n",
+      "       'BattingAverage', 'Outs', 'Strikeouts', 'Walks', 'HitByPitch',\n",
+      "       'Sacrifices', 'SacrificeFlies', 'GroundIntoDoublePlay', 'StolenBases',\n",
+      "       'CaughtStealing', 'OnBasePercentage', 'SluggingPercentage',\n",
+      "       'OnBasePlusSlugging', 'Wins', 'Losses', 'Saves',\n",
+      "       'InningsPitchedDecimal', 'TotalOutsPitched', 'InningsPitchedFull',\n",
+      "       'InningsPitchedOuts', 'EarnedRunAverage', 'PitchingHits',\n",
+      "       'PitchingRuns', 'PitchingEarnedRuns', 'PitchingWalks',\n",
+      "       'PitchingStrikeouts', 'PitchingHomeRuns', 'PitchesThrown',\n",
+      "       'PitchesThrownStrikes', 'WalksHitsPerInningsPitched',\n",
+      "       'PitchingBattingAverageAgainst', 'FantasyPointsFanDuel',\n",
+      "       'FantasyPointsDraftKings', 'WeightedOnBasePercentage',\n",
+      "       'PitchingCompleteGames', 'PitchingShutOuts', 'PitchingOnBasePercentage',\n",
+      "       'PitchingSluggingPercentage', 'PitchingOnBasePlusSlugging',\n",
+      "       'PitchingStrikeoutsPerNineInnings', 'PitchingWalksPerNineInnings',\n",
+      "       'PitchingWeightedOnBasePercentage', 'FantasyPointsBatting',\n",
+      "       'FantasyPointsPitching'],\n",
+      "      dtype='object')\n",
       "(5365, 66)\n"
      ]
     }
@@ -64,7 +42,7 @@
     "\n",
     "df = pd.read_csv(\"./PlayerSeason.2024.csv\")\n",
     "\n",
-    "print(df.head())\n",
+    "print(df.columns)\n",
     "print(df.shape)\n",
     "\n",
     "# TODO: https://www.dropbox.com/scl/fi/hy0sxw6gaai7ghemrshi8/lahman_1871-2023_csv.7z?dl=0&e=1&file_subpath=%2Flahman_1871-2023_csv&rlkey=edw1u63zzxg48gvpcmr3qpnhz"
@@ -79,7 +57,7 @@
     "server = 'tcp:sports-iq.database.windows.net,1433' \n",
     "database = 'main' \n",
     "username = 'CloudSAeab82b26' \n",
-    "password = '' \n",
+    "password = ''\n",
     "\n",
     "cnxn = pyodbc.connect('DRIVER={SQL Server};SERVER='+server+';DATABASE='+database+';UID='+username+';PWD='+ password)\n",
     "cursor = cnxn.cursor()"
@@ -109,6 +87,9 @@
     "for index, row in df.iterrows():\n",
     "\t\t\n",
     "\t\tcursor.execute(\"SELECT t.TeamID FROM [MLB].[Teams] t WHERE Abbreviation = ?\", row.Team)\n",
+    "\t\tteam = cursor.fetchone()\n",
+    "\n",
+    "\t\tcursor.execute(\"SELECT t.TeamID FROM [MLB].[Players] t WHERE Abbreviation = ?\", row.Team)\n",
     "\t\tteam = cursor.fetchone()\n",
     "\n",
     "\t\tplayerTeam = int(team[0]) if team is not None else None\n",
@@ -141,7 +122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
