--- a/sports-iq-ml/data-cleanup/mlb-teams.ipynb
+++ b/sports-iq-ml/data-cleanup/mlb-teams.ipynb
@@ -121,15 +121,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for index, row in df.iterrows():\n",
-    "\t\tcursor.execute(\"INSERT INTO MLB.Teams (City,Name,Abbreviation,IsActive,League,Division,PrimaryColor,SecondaryColor,TertiaryColor) VALUES(?,?,?,?,?,?,?,?,?)\", row.City, row.Name, row['[Key]'], True, row.League, row.Division, row.PrimaryColor, row.SecondaryColor, row.TertiaryColor)\n",
+    "# for index, row in df.iterrows():\n",
+    "# \t\tcursor.execute(\"INSERT INTO MLB.Teams (City,Name,Abbreviation,IsActive,League,Division,PrimaryColor,SecondaryColor,TertiaryColor) VALUES(?,?,?,?,?,?,?,?,?)\", row.City, row.Name, row['[Key]'], True, row.League, row.Division, row.PrimaryColor, row.SecondaryColor, row.TertiaryColor)\n",
     "\n",
-    "cnxn.commit()\n",
-    "cursor.close()"
+    "# cnxn.commit()\n",
+    "# cursor.close()"
    ]
   }
  ],
