Teams and Players MLB into SQL DB

--- a/sports-iq-ml/data-cleanup/mlb-teams.ipynb
+++ b/sports-iq-ml/data-cleanup/mlb-teams.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -43,6 +43,7 @@
    "source": [
     "import pyodbc \n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "\n",
     "df = pd.read_csv(\"./Team.2024.csv\")\n",
     "\n",
@@ -69,67 +70,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(30, 14)\n",
-      "0     LAD\n",
-      "1     CIN\n",
-      "2     TOR\n",
-      "3     PIT\n",
-      "4      KC\n",
-      "6     CHC\n",
-      "7     CLE\n",
-      "8      TB\n",
-      "9     PHI\n",
-      "10    SEA\n",
-      "11    ARI\n",
-      "12     SF\n",
-      "13    CHW\n",
-      "14    DET\n",
-      "15    NYM\n",
-      "16    BAL\n",
-      "17    MIN\n",
-      "18    LAA\n",
-      "19    MIA\n",
-      "20    COL\n",
-      "21    ATH\n",
-      "22    BOS\n",
-      "23    ATL\n",
-      "25    TEX\n",
-      "26    NYY\n",
-      "27    HOU\n",
-      "28    STL\n",
-      "29    MIL\n",
-      "30     SD\n",
-      "31    WSH\n",
-      "Name: [Key], dtype: object\n"
+      "(30, 14)\n"
      ]
     }
    ],
    "source": [
     "df = df.drop(df[df.Active == False].index)\n",
-    "\n",
+    "df = df.replace({np.nan: None})\n",
     "print(df.shape)\n",
-    "print(df['[Key]'])\n",
     "# print(df.loc[26])['[Key]']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for index, row in df.iterrows():\n",
-    "# \t\tcursor.execute(\"INSERT INTO MLB.Teams (City,Name,Abbreviation,IsActive,League,Division,PrimaryColor,SecondaryColor,TertiaryColor) VALUES(?,?,?,?,?,?,?,?,?)\", row.City, row.Name, row['[Key]'], True, row.League, row.Division, row.PrimaryColor, row.SecondaryColor, row.TertiaryColor)\n",
+    "for index, row in df.iterrows():\n",
+    "\t\tcursor.execute(\"INSERT INTO MLB.Teams (City,Name,Abbreviation,IsActive,League,Division,PrimaryColor,SecondaryColor,TertiaryColor) VALUES(?,?,?,?,?,?,?,?,?)\", row.City, row.Name, row['[Key]'], True, row.League, row.Division, row.PrimaryColor, row.SecondaryColor, row.TertiaryColor)\n",
     "\n",
-    "# cnxn.commit()\n",
-    "# cursor.close()"
+    "cnxn.commit()\n",
+    "cursor.close()"
    ]
   }
  ],
@@ -149,7 +118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
