SQL DB connect to Backend

--- a/sports-iq-ml/data-cleanup/mlb-player-stats.ipynb
+++ b/sports-iq-ml/data-cleanup/mlb-player-stats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -65,44 +65,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5365, 66)\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
-    "df = df.dropna(subset=['PositionCategory'])\n",
-    "df = df.replace(np.nan, None)\n",
-    "\n",
-    "print(type(df['BirthDate']))\n",
+    "df = df.dropna(subset=['TeamID'])\n",
+    "df = df.dropna(subset=['PlayerID'])\n",
     "\n",
     "print(df.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\nIndex(['StatID', 'TeamID', 'PlayerID', 'SeasonType', 'Season', 'Name', 'Team',\\n       'Position', 'PositionCategory', 'Started', 'AverageDraftPosition',\\n       'AuctionValue', 'Games', 'FantasyPoints', 'AtBats', 'Runs', 'Hits',\\n       'Singles', 'Doubles', 'Triples', 'HomeRuns', 'RunsBattedIn',\\n       'BattingAverage', 'Outs', 'Strikeouts', 'Walks', 'HitByPitch',\\n       'Sacrifices', 'SacrificeFlies', 'GroundIntoDoublePlay', 'StolenBases',\\n       'CaughtStealing', 'OnBasePercentage', 'SluggingPercentage',\\n       'OnBasePlusSlugging', 'Wins', 'Losses', 'Saves',\\n       'InningsPitchedDecimal', 'TotalOutsPitched', 'InningsPitchedFull',\\n       'InningsPitchedOuts', 'EarnedRunAverage', 'PitchingHits',\\n       'PitchingRuns', 'PitchingEarnedRuns', 'PitchingWalks',\\n       'PitchingStrikeouts', 'PitchingHomeRuns', 'PitchesThrown',\\n       'PitchesThrownStrikes', 'WalksHitsPerInningsPitched',\\n       'PitchingBattingAverageAgainst', 'FantasyPointsFanDuel',\\n       'FantasyPointsDraftKings', 'WeightedOnBasePercentage',\\n       'PitchingCompleteGames', 'PitchingShutOuts', 'PitchingOnBasePercentage',\\n       'PitchingSluggingPercentage', 'PitchingOnBasePlusSlugging',\\n       'PitchingStrikeoutsPerNineInnings', 'PitchingWalksPerNineInnings',\\n       'PitchingWeightedOnBasePercentage', 'FantasyPointsBatting',\\n       'FantasyPointsPitching'],\\n\""
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "for index, row in df.iterrows():\n",
+    "\t\tplayerID = None\n",
+    "\t\tteamID = None\n",
     "\t\t\n",
-    "\t\tcursor.execute(\"SELECT t.TeamID FROM [MLB].[Teams] t WHERE Abbreviation = ?\", row.Team)\n",
+    "\t\tcursor.execute(\"SELECT PlayerID FROM MLB.Players WHERE ExternalPlayerID = ?\", row.PlayerID)\n",
+    "\t\tplayer = cursor.fetchone()\n",
+    "\t\tif (player is not None):\n",
+    "\t\t\tplayerID = player[0]\n",
+    "\n",
+    "\t\tcursor.execute(\"SELECT TeamID FROM MLB.Teams WHERE ExternalTeamID = ?\", row.TeamID)\n",
     "\t\tteam = cursor.fetchone()\n",
+    "\t\tif (team is not None):\n",
+    "\t\t\tteamID = team[0]\n",
     "\n",
-    "\t\tcursor.execute(\"SELECT t.TeamID FROM [MLB].[Players] t WHERE Abbreviation = ?\", row.Team)\n",
-    "\t\tteam = cursor.fetchone()\n",
+    "\t\tif (playerID is None or teamID is None):\n",
+    "\t\t\tcontinue\n",
     "\n",
-    "\t\tplayerTeam = int(team[0]) if team is not None else None\n",
-    "\n",
-    "\t\tdate = None\n",
-    "\n",
-    "\t\tif (row.BirthDate is not None):\n",
-    "\t\t\tdate = datetime.strptime(row.BirthDate, \"%m/%d/%Y %H:%M:%S %p\")\n",
-    "\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t#11/30/1987 12:00:00 AM\n",
-    "\t\tcursor.execute(\"INSERT INTO MLB.Players (FirstName,LastName,Jersey,PositionCategory,Position,Status,TeamID, DateOfBirth) VALUES(?,?,?,?,?,?,?,?)\", row.FirstName, row.LastName, row.Jersey, row.PositionCategory, row.Position, row.Status, playerTeam, date)\n",
+    "\t\tcursor.execute(\"\"\"\n",
+    "\t\t\tINSERT INTO MLB.Batting\n",
+    "\t\t\t(\n",
+    "\t\t\t\t\tPlayerID, TeamID, Season, SeasonType, Games, Starts, AtBats, Runs, Hits, Singles,\n",
+    "\t\t\t\t\tDoubles, Triples, HomeRuns, RunsBattedIn, BattingAverage, Outs, Strikeouts,\n",
+    "\t\t\t\t\tWalks, HitByPitch, Steals, CaughtStealing, OBP, Slug, OBPPlus\n",
+    "\t\t\t)\n",
+    "\t\t\tVALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)\n",
+    "\t\t\t\"\"\",\n",
+    "\t\t\tplayerID, teamID, row.Season, row.SeasonType, row.Games, row.Started, row.AtBats, row.Runs, row.Hits, row.Singles,\n",
+    "\t\t\trow.Doubles, row.Triples, row.HomeRuns, row.RunsBattedIn, row.BattingAverage, row.Outs, row.Strikeouts,\n",
+    "\t\t\trow.Walks, row.HitByPitch, row.StolenBases, row.CaughtStealing, row.OnBasePercentage, row.SluggingPercentage, row.OnBasePlusSlugging)\n",
+    "\t\t\n",
+    "\t\t# Only insert Pitchers\n",
+    "\t\tif (row.PositionCategory == 'P'):\n",
+    "\t\t\tcursor.execute(\"\"\"\n",
+    "\t\t\t\tINSERT INTO MLB.Pitching\n",
+    "\t\t\t\t(\n",
+    "\t\t\t\t\t\tPlayerID, TeamID, Season, SeasonType, Games, Starts, Wins, Losses, Saves, InningsPitched,\n",
+    "\t\t\t\t\t\tERA, Runs, Hits, HomeRuns, Strikeouts, StrikeoutsPerNineInnings, Walks, WalksPerNineInnings,\n",
+    "\t\t\t\t\t\tPitchesThrown, WHIP, BattingAverageAgainst, OBP, Slug, OBPPlus, Shutouts\n",
+    "\t\t\t\t)\n",
+    "\t\t\t\tVALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)\n",
+    "\t\t\t\t\"\"\",\n",
+    "\t\t\t\tplayerID, teamID, row.Season, row.SeasonType, row.Games, row.Started, row.Wins, row.Losses, row.Saves, row.InningsPitchedDecimal,\n",
+    "\t\t\t\trow.EarnedRunAverage, row.PitchingRuns, row.PitchingHits, row.PitchingHomeRuns, row.PitchingStrikeouts, row.PitchingStrikeoutsPerNineInnings, row.PitchingWalks, row.PitchingWalksPerNineInnings,\n",
+    "\t\t\t\trow.PitchesThrown, row.WalksHitsPerInningsPitched, row.PitchingBattingAverageAgainst, row.PitchingOnBasePercentage, row.PitchingSluggingPercentage, row.PitchingOnBasePlusSlugging, row.PitchingShutOuts)\n",
     "\n",
     "cnxn.commit()\n",
-    "cursor.close()"
+    "cursor.close()\n",
+    "\n",
+    "\"\"\"\n",
+    "Index(['StatID', 'TeamID', 'PlayerID', 'SeasonType', 'Season', 'Name', 'Team',\n",
+    "       'Position', 'PositionCategory', 'Started', 'AverageDraftPosition',\n",
+    "       'AuctionValue', 'Games', 'FantasyPoints', 'AtBats', 'Runs', 'Hits',\n",
+    "       'Singles', 'Doubles', 'Triples', 'HomeRuns', 'RunsBattedIn',\n",
+    "       'BattingAverage', 'Outs', 'Strikeouts', 'Walks', 'HitByPitch',\n",
+    "       'Sacrifices', 'SacrificeFlies', 'GroundIntoDoublePlay', 'StolenBases',\n",
+    "       'CaughtStealing', 'OnBasePercentage', 'SluggingPercentage',\n",
+    "       'OnBasePlusSlugging', 'Wins', 'Losses', 'Saves',\n",
+    "       'InningsPitchedDecimal', 'TotalOutsPitched', 'InningsPitchedFull',\n",
+    "       'InningsPitchedOuts', 'EarnedRunAverage', 'PitchingHits',\n",
+    "       'PitchingRuns', 'PitchingEarnedRuns', 'PitchingWalks',\n",
+    "       'PitchingStrikeouts', 'PitchingHomeRuns', 'PitchesThrown',\n",
+    "       'PitchesThrownStrikes', 'WalksHitsPerInningsPitched',\n",
+    "       'PitchingBattingAverageAgainst', 'FantasyPointsFanDuel',\n",
+    "       'FantasyPointsDraftKings', 'WeightedOnBasePercentage',\n",
+    "       'PitchingCompleteGames', 'PitchingShutOuts', 'PitchingOnBasePercentage',\n",
+    "       'PitchingSluggingPercentage', 'PitchingOnBasePlusSlugging',\n",
+    "       'PitchingStrikeoutsPerNineInnings', 'PitchingWalksPerNineInnings',\n",
+    "       'PitchingWeightedOnBasePercentage', 'FantasyPointsBatting',\n",
+    "       'FantasyPointsPitching'],\n",
+    "\"\"\""
    ]
   }
  ],
@@ -122,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
