Start on Ranking

--- a/sports-iq-ml/data-cleanup/mlb-player-stats.ipynb
+++ b/sports-iq-ml/data-cleanup/mlb-player-stats.ipynb
@@ -45,14 +45,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "server = 'tcp:sports-iq.database.windows.net,1433' \n",
     "database = 'main' \n",
     "username = 'CloudSAeab82b26' \n",
-    "password = 'EkCVer7h44VMnpe'\n",
+    "password = ''\n",
     "\n",
     "cnxn = pyodbc.connect('DRIVER={SQL Server};SERVER='+server+';DATABASE='+database+';UID='+username+';PWD='+ password)\n",
     "cursor = cnxn.cursor()"
