--- a/sports-iq-ml/data-cleanup/nba-player.ipynb
+++ b/sports-iq-ml/data-cleanup/nba-player.ipynb
@@ -65,14 +65,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "server = 'tcp:sports-iq.database.windows.net,1433' \n",
     "database = 'main' \n",
     "username = 'CloudSAeab82b26' \n",
-    "password = 'EkCVer7h44VMnpe' \n",
+    "password = '' \n",
     "\n",
     "cnxn = pyodbc.connect('DRIVER={SQL Server};SERVER='+server+';DATABASE='+database+';UID='+username+';PWD='+ password)\n",
     "cursor = cnxn.cursor()"
@@ -143,7 +143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
