Stable runtime predictor

--- a/sports-iq-ml/riot/riot-classifier-model.ipynb
+++ b/sports-iq-ml/riot/riot-classifier-model.ipynb
@@ -2,34 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
     "import pandas as pd\n",
-    "from sklearn.metrics import accuracy_score"
+    "from sklearn.metrics import accuracy_score\n",
+    "import pickle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(17165, 22)"
+       "(22961, 28)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "matches = pd.read_csv('./AllMatches.csv')\n",
+    "matches_challenger = pd.read_csv('./AllMatches.csv')\n",
+    "matches_emerald = pd.read_csv(\"./AllMatches-EMERALD.csv\")\n",
+    "\n",
+    "matches = pd.concat([matches_challenger, matches_emerald])\n",
     "\n",
     "matches = matches.drop('Unnamed: 0', axis=1)\n",
     "matches.shape"
@@ -37,22 +41,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['matchId', 'gameDurationSeconds', 'championBlueTop', 'championBlueJG',\n",
-       "       'championBlueMid', 'championBlueBot', 'championBlueSup',\n",
-       "       'championRedTop', 'championRedJG', 'championRedMid', 'championRedBot',\n",
-       "       'championRedSup', 'goldDifference', 'blueGrubCount', 'redGrubCount',\n",
-       "       'blueDragonCount', 'redDragonCount', 'blueBaronCount', 'redBaronCount',\n",
-       "       'blueAtakhan', 'redAtakhan', 'winner'],\n",
+       "(22960, 28)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Remove Nan\n",
+    "matches = matches.dropna()\n",
+    "matches.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['match_id', 'duration', 'blue_top', 'blue_jg', 'blue_mid', 'blue_bot',\n",
+       "       'blue_supp', 'red_top', 'red_jg', 'red_mid', 'red_bot', 'red_supp',\n",
+       "       'gold_difference', 'blue_champ_kills', 'red_champ_kills',\n",
+       "       'blue_tower_kills', 'red_tower_kills', 'blue_grubs', 'red_grubs',\n",
+       "       'blue_heralds', 'red_heralds', 'blue_dragons', 'red_dragons',\n",
+       "       'blue_barons', 'red_barons', 'blue_atakhan', 'red_atakhan', 'winner'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,27 +89,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# features = [\"championBlueTop\", \"championBlueJG\", \"championBlueMid\", \"championBlueBot\", \"championBlueSup\", \n",
-    "# \t\t\t\t\t\t\"championRedTop\", \"championRedJG\", \"championRedMid\", \"championRedBot\", \"championRedSup\",\n",
-    "# \t\t\t\t\t\t\"goldDifference\", \"blueGrubCount\", \"redGrubCount\"]\n",
+    "features = ['duration', 'blue_top', 'blue_jg', 'blue_mid', 'blue_bot',\n",
+    "       'blue_supp', 'red_top', 'red_jg', 'red_mid', 'red_bot', 'red_supp',\n",
+    "       'gold_difference', 'blue_champ_kills', 'red_champ_kills',\n",
+    "       'blue_tower_kills', 'red_tower_kills', 'blue_grubs', 'red_grubs',\n",
+    "       'blue_heralds', 'red_heralds', 'blue_dragons', 'red_dragons',\n",
+    "       'blue_barons', 'red_barons', 'blue_atakhan', 'red_atakhan',]\n",
     "\n",
-    "# features = [\"goldDifference\", \"blueGrubCount\", \"redGrubCount\"]\n",
-    "\n",
-    "# features = [\"championBlueTop\", \"championBlueJG\", \"championBlueMid\", \"championBlueBot\", \"championBlueSup\", \n",
-    "# \t\t\t\t\t\t\"championRedTop\", \"championRedJG\", \"championRedMid\", \"championRedBot\", \"championRedSup\",\n",
-    "# \t\t\t\t\t\t\"goldDifference\", \"blueGrubCount\", \"redGrubCount\", \"blueDragonCount\", \"redDragonCount\"]\n",
-    "\n",
-    "# features = [\"championBlueTop\", \"championBlueJG\", \"championBlueMid\", \"championBlueBot\", \"championBlueSup\", \n",
-    "# \t\t\t\t\t\t\"championRedTop\", \"championRedJG\", \"championRedMid\", \"championRedBot\", \"championRedSup\"]\n",
-    "\n",
-    "features = [\"championBlueTop\", \"championBlueJG\", \"championBlueMid\", \"championBlueBot\", \"championBlueSup\", \n",
-    "\t\t\t\t\t\t\"championRedTop\", \"championRedJG\", \"championRedMid\", \"championRedBot\", \"championRedSup\",\n",
-    "\t\t\t\t\t\t\"goldDifference\", \"blueGrubCount\", \"redGrubCount\", \"blueDragonCount\", \"redDragonCount\", 'blueBaronCount', 'redBaronCount']\n",
-    "\n",
+    "# add duration\n",
     "# Export model to binary, read up on exporting\n",
     "\n",
     "X, y = matches[features], matches['winner']"
@@ -91,38 +108,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def train_predict(X_train, y_train, X_test, y_test):\n",
-    "\tmodel =  RandomForestClassifier()\n",
-    "\tmodel.fit(X_train, y_train)\n",
-    "\n",
-    "\t# 6 Evaluation: Test the model via predicting\n",
-    "\ty_pred = model.predict(X_train)\n",
-    "\tacc_train = accuracy_score(y_train, y_pred)\n",
-    "\tprint(\"accuracy score (training data): %.2f\" % acc_train)\n",
-    "\ty_pred = model.predict(X_test)\n",
-    "\tacc_test = accuracy_score(y_test, y_pred)\n",
-    "\tprint(\"accuracy_score (test data): %.2f\" % acc_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Split the data into Train and Test so we can predict\n",
-    "TEST_PROP, RANDOM_SEED = 0.5, 0\n",
+    "TEST_PROP, RANDOM_SEED = 0.8, 0\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X, y, test_size=TEST_PROP, random_state=RANDOM_SEED)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -130,20 +148,34 @@
      "output_type": "stream",
      "text": [
       "accuracy score (training data): 1.00\n",
-      "accuracy_score (test data): 0.90\n"
+      "accuracy_score (test data): 0.98\n"
      ]
     }
    ],
    "source": [
-    "train_predict(X_train, y_train, X_test, y_test)"
+    "model =  RandomForestClassifier()\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# 6 Evaluation: Test the model via predicting\n",
+    "y_pred = model.predict(X_train)\n",
+    "acc_train = accuracy_score(y_train, y_pred)\n",
+    "print(\"accuracy score (training data): %.2f\" % acc_train)\n",
+    "y_pred = model.predict(X_test)\n",
+    "acc_test = accuracy_score(y_test, y_pred)\n",
+    "print(\"accuracy_score (test data): %.2f\" % acc_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Save Model\n",
+    "filename = 'riot_classifier.pkl'\n",
+    "with open(filename, 'wb') as file:\n",
+    "\t\tpickle.dump(model, file)"
+   ]
   }
  ],
  "metadata": {
