--- a/sports-iq-ml/riot/collect-matches.ipynb
+++ b/sports-iq-ml/riot/collect-matches.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RGAPI-4fa3c214-6a7e-46b1-9a9b-b1caebf28d89\n"
+      "RGAPI-59d3c7c7-2a2d-49d6-a12e-cf0bd2614069\n"
      ]
     }
    ],
@@ -22,14 +22,14 @@
     "api_key = os.environ.get('riot_api_key')\n",
     "base_url = \"https://na1.api.riotgames.com\"\n",
     "solo_duo = \"RANKED_SOLO_5x5\"\n",
-    "division = \"EMERALD\"\n",
+    "division = \"SILVER\"\n",
     "\n",
     "print(api_key)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
        "(820, 13)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,59 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "400\n"
+      "395\n",
+      "786\n",
+      "1186\n",
+      "1586\n",
+      "1986\n",
+      "2386\n",
+      "2786\n",
+      "3177\n",
+      "3577\n",
+      "3977\n",
+      "4470\n",
+      "4851\n",
+      "5243\n",
+      "5637\n",
+      "6022\n",
+      "6380\n",
+      "6760\n",
+      "7160\n",
+      "7560\n",
+      "7960\n",
+      "8460\n",
+      "8858\n",
+      "9246\n",
+      "9643\n",
+      "10043\n",
+      "10443\n",
+      "10839\n",
+      "11239\n",
+      "11626\n",
+      "12026\n",
+      "12526\n",
+      "12926\n",
+      "13318\n",
+      "13718\n",
+      "14105\n",
+      "14505\n",
+      "14900\n",
+      "15300\n",
+      "15692\n",
+      "16092\n",
+      "16182\n",
+      "(16182, 1)\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
