--- a/sports-iq-ml/riot/riot-classifier-model.ipynb
+++ b/sports-iq-ml/riot/riot-classifier-model.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
        "(36088, 28)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,6 +34,7 @@
    "source": [
     "matches_challenger = pd.read_csv('./AllMatches.csv')\n",
     "matches_emerald = pd.read_csv(\"./AllMatches-EMERALD.csv\")\n",
+    "matches_silver = pd.read_csv(\"./AllMatches-SILVER.csv\")\n",
     "\n",
     "matches = pd.concat([matches_challenger, matches_emerald])\n",
     "\n",
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +53,7 @@
        "(36086, 28)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1549,7 +1550,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
